trunk (unreleased):
* add xen-{event,grant}{,.unix} ocamlfind packages to merge with
  Mirage
* update to xen-4.4, remove xenguest bindings

0.9.8 (8-Aug-2013):
* update Gnt interface to match mirage 0.9.4
* add ocamldoc generation
* add tests for gntshr and gnttab

0.9.7 (25-Jul-2013):
* add function to check if an HVM guest has PV drivers
* fix PCI passthrough on xen 4.2

0.9.6 (2-Jul-2013):
* conditionally compile xenlight library

0.9.3 (21-Jun-2013):
* remove linking error on standard xen systems when using libxl

0.9.2 (21-Jun-2013):
* add experimental libxl bindings

0.9.0 (3-Jun-2013):
* first public release
