@@ -24,6 +24,25 @@ let cc verbose c_program =
   if Sys.file_exists o_file then Sys.remove o_file;
   found
 
+let run verbose cmd =
+  if verbose then Printf.printf "running: %s\n" cmd;
+  let out_file = Filename.temp_file "configure" ".stdout" in
+  let code = Sys.command (Printf.sprintf "%s > %s" cmd out_file) in
+  let ic = open_in out_file in
+  let result = ref [] in
+  let lines =
+    try
+      while true do
+        let line = input_line ic in
+        result := line :: !result
+      done;
+      !result
+    with End_of_file -> !result in
+  close_in ic;
+  if code <> 0
+  then failwith (Printf.sprintf "%s: %d: %s" cmd code (String.concat " " (List.rev lines)))
+  else List.rev lines
+
 let find_header verbose name =
   let c_program = [
     Printf.sprintf "#include <%s>" name;
@@ -69,6 +88,19 @@ let find_xen_4_4 verbose =
   Printf.printf "Looking for xen-4.4: %s\n" (if found then "ok" else "missing");
   found
 
+let check_arm_header verbose =
+  let lines = run verbose "arch" in
+  let arch = List.hd lines in
+  let arm = String.length arch >= 3 && String.sub arch 0 3 = "arm" in
+  if arm then begin
+    let header = "/usr/include/xen/arch-arm/hvm/save.h" in
+    if not(Sys.file_exists header) then begin
+      Printf.printf "Creating empty header %s\n" header;
+      ignore(run verbose (Printf.sprintf "mkdir -p %s" (Filename.dirname header)));
+      ignore(run verbose (Printf.sprintf "touch %s" header))
+    end
+  end
+
 let disable_xenctrl =
   let doc = "Disable the xenctrl library" in
   Arg.(value & flag & info ["disable-xenctrl"] ~docv:"DISABLE_XENCTRL" ~doc)
@@ -86,6 +118,8 @@ let configure verbose disable_xenctrl disable_xenlight =
     Printf.fprintf stderr "Failure: we can't build anything without xenctrl.h\n";
     exit 1;
   end;
+  check_arm_header verbose;
+ 
   (* Write config.mk *)
   let lines = 
     [ "# Warning - this file is autogenerated by the configure script";
